[package]
name = "myxdp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-bpf-cty = { git = "https://github.com/aya-rs/aya", branch = "main" }
myxdp-common = { path = "../myxdp-common" }
memoffset = "0.6"

[[bin]]
name = "myxdp"
path = "src/main.rs"

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []
