[package]
name = "myxdp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.11", features=["async_tokio"] }
myxdp-common = { path = "../myxdp-common", features=["userspace"] }
anyhow = "1.0.42"
bytes = "1"
tokio = { version = "1.9.0", features = ["full"] }

[[bin]]
name = "myxdp"
path = "src/main.rs"
